	* enhance calculation of synched scale label 
	* Reduce DataExplorer startup duration
	* Ask user for confirmation prior to purging an object key
	* fix channel object key handling, channels of type outlet (chargers) might have different object key, update object selector accordingly
	* fix unsaved reason entry for changed comment
Device specific changes/fixes
	* HoTTAdapter* - fix 19200 Baud protocol live data, skip Rx query while other sensors detected, Rx data in sensor data contained
	* HoTTAdapter* - add file selection hint for *.bin;*.log 
	* HoTTAdapter2 - fix statistics calculation while capacity doesn't start at zero 
	* S32 - fix factor to correct external temperatures
	* S32_2 - initial release for S32 as version 2 displaying all measurement values on a single time line
	* S32 - fix measurement synchronization references (need device XML replacement)
	* S32 - fix external temperature factor according customer feedback
	* Ultramat* single channel charger - fix possible NullPointerException
	* OpenTx-Telemetry - fix potential exception, add some more mapping parameter, enable visualization control and help
	* OpenTx-Telemetry - split log according time entries into separate record sets
	* Futaba-Telemetry - fix parsing exception "---", enable visualization control and help
	* Futaba-Telemetry - fix EOFException saving OSD with record set different real size
	* Hitec X1 Red - add initial support (alpha), looking for user of this device interested collection data using DataExplorer
	* WSTech DataVario - replace German description with supposed key
	* UltraDuoPlus* - refine object key selection by memory name

History analysis
	* Enhance UI
		>> Add support for triggered values (e.g. motor runtime height)
		>> Add refresh menu item and shortcut
		>> Add object key wizard (if accessing new directories) 
		>> Remove MessageBox "No log files"
		>> Enhance toggling 'Smart values' by preserving the user selections